Apporter quelques modification

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="location">
                     <h3>Togo</h3>
                     <p><strong>Adresse :</strong> 123 Rue de la Ferme, Lomé, Togo</p>
-                    <p><strong>Téléphone :</strong> +228 90 12 34 56</p>
+                    <p><strong>Téléphone :</strong> +228 90 12 xx xx</p>
                     <p><strong>Email :</strong> <a href="mailto:contact-togo@ferme-africa.com">contact-togo@ferme-africa.com</a></p>
                 </div>
         
@@ -37,7 +37,7 @@
                 <div class="location">
                     <h3>Bénin</h3>
                     <p><strong>Adresse :</strong> 456 Avenue des Champs, Cotonou, Bénin</p>
-                    <p><strong>Téléphone :</strong> +229 91 23 45 67</p>
+                    <p><strong>Téléphone :</strong> +229 91 23 xx xx</p>
                     <p><strong>Email :</strong> <a href="mailto:contact-benin@ferme-africa.com">contact-benin@ferme-africa.com</a></p>
                 </div>
         
@@ -45,7 +45,7 @@
                 <div class="location">
                     <h3>Côte d'Ivoire</h3>
                     <p><strong>Adresse :</strong> Zone Agricole, Abidjan, Côte d'Ivoire</p>
-                    <p><strong>Téléphone :</strong> +225 07 89 12 34</p>
+                    <p><strong>Téléphone :</strong> +225 07 89 xx xx</p>
                     <p><strong>Email :</strong> <a href="mailto:contact-ci@ferme-africa.com">contact-ci@ferme-africa.com</a></p>
                 </div>
             </div>
