Décris ici ce que tu as modifié

--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mine d’Or Africa</title>
+    <title>Ferme Locale Africa</title>
     <link rel="stylesheet" href="style.css">
     <!-- Inclure la bibliothèque Leaflet pour les cartes -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 </head>
 <body>
     <header>
-        <h1>Bienvenue au <span>Mine d’Or Africa</span></h1>
-        <p>Explorez toutes les mines d’or et de diamants d’Afrique !</p>
+        <h1>Bienvenue au <span>Ferme Locale Africa</span></h1>
+        <p>Explorez toutes les fermes locales et les mines de diamants d’Afrique !</p>
     </header>
     <main>
         <!-- Section de la carte principale -->
         <section id="map-section">
-            <h2>Localisation de Mine d’Or Africa</h2>
+            <h2>Localisation de la Ferme Locale Africa</h2>
             <div id="main-map" style="width: 100%; height: 400px;"></div>
         </section>
 
@@ -59,7 +59,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024 Mine d’Or Africa - Tous droits réservés</p>
+        <p>&copy; 2024 Ferme Locale Africa - Tous droits réservés</p>
     </footer>
 
     <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
