--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Bienvenue au <span>Ferme Locale Africa</span></h1>
-        <p>Explorez toutes les fermes locales et les mines de diamants d’Afrique !</p>
+        <p>Explorez toutes les fermes locales et les agriculteurs proches de chez vous !</p>
     </header>
     <main>
         <!-- Section de la carte principale -->
