--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
         <section id="contact">
             <h2>Contactez-nous</h2>
             <p>Nous sommes présents dans trois pays d'Afrique de l'Ouest. Voici nos coordonnées :</p>
-            <p class="info">pour intégrer la localisation de votre ferme et/ou votre culture agricole,<br> envoyer  vos informations comprenant adresse postale, numéro de téléphone <br> et type de cultures et/ ou d'élevage au : +228 97 38 85 44</p>
+            <p class="info">Pour intégrer la localisation de votre ferme et/ou votre culture agricole,<br>
+            envoyez vos informations (adresse postale, numéro de téléphone,<br>
+            type de cultures et/ou d’élevage) au : <strong>+228 97 38 85 44</strong>
+            </p>
         
         
             <div class="contact-locations">
